Small display and overflow style fixes

--- a/src/Lists/ReorderableList.scss
+++ b/src/Lists/ReorderableList.scss
@@ -2,6 +2,7 @@
 
 .reorderable-list {
     overflow-y: auto;
+    overflow-x: hidden;
     max-height: 30rem;
 
     :first-child {
