--- a/src/Modal/Modal.scss
+++ b/src/Modal/Modal.scss
@@ -8,7 +8,6 @@
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: auto;
     background-color: $primary-color-transparent;
 
     &--show {
