--- a/src/Modal/ModalContent.scss
+++ b/src/Modal/ModalContent.scss
@@ -6,5 +6,6 @@
     padding-top: $padding;
     padding-bottom: $padding;
     overflow-y: auto;
+    overflow-x: hidden;
     max-height: 30rem;
 }
